crates/w3c-vc/src/model/snapshots/vercre_w3c_vc__model__types__tests__language_string_serialization.snap
---
source: crates/w3c-vc/src/model/types.rs
assertion_line: 179
expression: hydrated
---
name:
  "@value": Alice
  "@language": en
description:
  - "@value": "HTML and CSS: Designing and Creating Websites"
    "@language": en
  - "@value": "HTML و CSS: تصميم و إنشاء مواقع الويب"
    "@language": ar
    "@direction": rtl
other: Just a string
