crates/w3c-vc/src/model/snapshots/vercre_w3c_vc__model__types__tests__language_string_serialization_json.snap
---
source: crates/w3c-vc/src/model/types.rs
assertion_line: 183
expression: serialized
---
description:
  - "@language": en
    "@value": "HTML and CSS: Designing and Creating Websites"
  - "@direction": rtl
    "@language": ar
    "@value": "HTML و CSS: تصميم و إنشاء مواقع الويب"
name:
  "@language": en
  "@value": Alice
other: Just a string
